--- a/task1/package.json
+++ b/task1/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "angular-font-awesome": "^3.1.2",
     "axios": "^0.19.0",
     "bootstrap": "4.1.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^4.3.0",
     "node-json-db": "^0.11.0",
