--- a/task1/package.json
+++ b/task1/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^4.3.0",
+    "ngx-image-compress": "^7.2.4",
     "node-json-db": "^0.11.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
