--- a/task1/package.json
+++ b/task1/package.json
@@ -27,6 +27,8 @@
     "bootstrap": "4.1.1",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "ngx-bootstrap": "^4.3.0",
     "ngx-image-compress": "^7.2.4",
     "node-json-db": "^0.11.0",
